# solana-data-aggregator

./: .gitignore  Cargo.toml  LICENSE  README.md  logs.txt
src/: aggregator.rs  api.rs  error.rs  fetcher.rs  lib.rs  main.rs  monitor.rs  processor.rs  storage.rs  streamer.rs  traits.rs  types.rs
