[package]
name = "solana-data-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.17", features = ["derive"]}
dotenv = "0.15.0"
eyre = "0.6.12"
log = "0.4.22"
rocksdb = "0.22.0"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.128"
solana-client = "2.0.9"
solana-program = "2.0.9"
solana-transaction-status = "2.0.9"
tokio = {version = "1.40.0", features = ["full"]}
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
url = "2.5.2"
