[package]
name = "solana-data-aggregator"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_data_aggregator"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
nanodb = "0.4.5"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.128"
solana-client = "2.0.9"
solana-program = "2.0.9"
solana-transaction-status = "2.0.9"
thiserror = "1.0.63"
tokio = {version = "1.40.0", features = ["full"]}
tokio-stream = "0.1.16"
tokio-util = "0.7.12"
trait-variant = "0.1.2"
warp = "0.3.7"
